--- a/epub_pager.cfg
+++ b/epub_pager.cfg
@@ -2,7 +2,7 @@
     "paged_epub_library": "/Users/tbrown/data_store/paged_epubs",
     "words_per_page": 300,
     "total_pages": 0,
-    "page_footer": true,
+    "page_footer": false,
     "footer_align": "right",
     "footer_color": "red",
     "footer_bracket": "<",
