--- a/epub_pager.cfg
+++ b/epub_pager.cfg
@@ -15,6 +15,7 @@
     "chapter_pages": true,
     "chapter_bracket": "",
     "nav_pagelist": true,
+    "ebookconvert": "/Applications/calibre.app/Contents/MacOS/ebook-convert",
     "epubcheck": "/opt/homebrew/bin/epubcheck",
     "DEBUG": false
 }
