--- a/epub_pager.cfg
+++ b/epub_pager.cfg
@@ -1,21 +1,22 @@
 {
-    "paged_epub_library": "/Users/tbrown/data_store/paged_epubs",
-    "words_per_page": 300,
-    "total_pages": 0,
-    "page_footer": false,
-    "footer_align": "right",
-    "footer_color": "red",
-    "footer_bracket": "<",
-    "footer_fontsize": "75%",
-    "footer_total": true,
-    "superscript": true,
+    "outdir": "/Users/tbrown/data_store/epub_pager/newpaged",
+    "match": true,
+    "genplist": true,
+    "pgwords": 300,
+    "pages": 0,
+    "footer": true,
+    "ft_align": "center",
+    "ft_color": "red",
+    "ft_bkt": "<",
+    "ft_fntsz": "75%",
+    "ft_pgtot": true,
+    "superscript": false,
     "super_color": "red",
-    "super_fontsize": "60%",
-    "super_total": true,
-    "chapter_pages": true,
-    "chapter_bracket": "",
-    "nav_pagelist": true,
-    "ebookconvert": "/Applications/calibre.app/Contents/MacOS/ebook-convert",
+    "super_fntsz": "60%",
+    "super_total": false,
+    "chap_pgtot": true,
+    "chap_bkt": "",
+    "ebookconvert": true,
     "epubcheck": "/opt/homebrew/bin/epubcheck",
     "DEBUG": false
 }
