--- a/epub_pager.cfg
+++ b/epub_pager.cfg
@@ -1,5 +1,5 @@
 {
-    "outdir": "/Users/tbrown/data_store/epub_pager/newpaged",
+    "outdir": "/Users/tbrown/data_store/epub_pager/test_paged_epubs",
     "match": true,
     "genplist": true,
     "pgwords": 300,
@@ -16,7 +16,7 @@
     "super_total": false,
     "chap_pgtot": true,
     "chap_bkt": "",
-    "ebookconvert": true,
+    "ebookconvert": "/Applications/calibre.app/Contents/MacOS/ebook-convert",
     "epubcheck": "/opt/homebrew/bin/epubcheck",
     "DEBUG": false
 }
