Testing README.md

--- a/epub_pager.cfg
+++ b/epub_pager.cfg
@@ -1,22 +1,23 @@
 {
-    "outdir": "/Users/tbrown/data_store/epub_pager/test_paged_epubs",
+    "outdir": "/Users/tbrown/DropboxMaestral/Books/paged_ebooks",
     "match": true,
     "genplist": true,
     "pgwords": 300,
     "pages": 0,
-    "footer": true,
-    "ft_align": "center",
-    "ft_color": "red",
-    "ft_bkt": "<",
-    "ft_fntsz": "75%",
-    "ft_pgtot": true,
-    "superscript": false,
+    "pageline": true,
+    "pl_align": "center",
+    "pl_color": "red",
+    "pl_bkt": "<",
+    "pl_fntsz": "75%",
+    "pl_pgtot": true,
+    "superscript": true,
     "super_color": "red",
     "super_fntsz": "60%",
-    "super_total": false,
+    "super_total": true,
     "chap_pgtot": true,
     "chap_bkt": "",
-    "ebookconvert": "/Applications/calibre.app/Contents/MacOS/ebook-convert",
-    "epubcheck": "/opt/homebrew/bin/epubcheck",
+    "ebookconvert": "None",
+    "chk_orig": true,
+    "epubcheck": "none",
     "DEBUG": false
 }
