Begin code to remove dependency on xmltodict

--- a/epubpager.cfg
+++ b/epubpager.cfg
@@ -1,5 +1,5 @@
 {
-    "outdir": "/Users/tbrown/DropboxMaestral/Books/paged_ebooks",
+    "outdir": "./paged_epubs",
     "match": true,
     "genplist": true,
     "pgwords": 300,
@@ -10,14 +10,15 @@
     "pl_bkt": "<",
     "pl_fntsz": "75%",
     "pl_pgtot": true,
-    "superscript": true,
+    "superscript": false,
     "super_color": "red",
     "super_fntsz": "60%",
     "super_total": true,
     "chap_pgtot": true,
     "chap_bkt": "",
-    "ebookconvert": "None",
+    "ebookconvert": "/Applications/calibre.app/Contents/MacOS/ebook-convert",
     "chk_orig": true,
-    "epubcheck": "none",
+    "epubcheck": "/opt/homebrew/bin/epubcheck",
+    "chk_warn": false,
     "DEBUG": false
 }
