--- a/epubpager.cfg
+++ b/epubpager.cfg
@@ -2,7 +2,7 @@
     "outdir": "./paged_epubs",
     "match": true,
     "genplist": true,
-    "pgwords": 300,
+    "pgwords": 275,
     "pages": 0,
     "pageline": true,
     "pl_align": "center",
@@ -10,15 +10,15 @@
     "pl_bkt": "<",
     "pl_fntsz": "75%",
     "pl_pgtot": true,
-    "superscript": false,
+    "superscript": true,
     "super_color": "red",
     "super_fntsz": "60%",
     "super_total": true,
     "chap_pgtot": true,
     "chap_bkt": "",
     "ebookconvert": "/Applications/calibre.app/Contents/MacOS/ebook-convert",
-    "chk_orig": true,
     "epubcheck": "/opt/homebrew/bin/epubcheck",
-    "chk_warn": false,
+    "chk_orig": true,
+    "chk_paged": true,
     "DEBUG": false
 }
