Fix epupcheck issues.

--- a/epubpager.cfg
+++ b/epubpager.cfg
@@ -17,7 +17,7 @@
     "chap_pgtot": true,
     "chap_bkt": "",
     "ebookconvert": "/Applications/calibre.app/Contents/MacOS/ebook-convert",
-    "epubcheck": "/opt/homebrew/bin/epubcheck",
+    "epubcheck": "",
     "chk_orig": true,
     "chk_paged": true,
     "DEBUG": false
