Fix problem with filenames with spaces when using epubcheck shell command.

--- a/epubpager.cfg
+++ b/epubpager.cfg
@@ -1,5 +1,5 @@
 {
-    "outdir": "./paged_epubs",
+    "outdir": "./",
     "match": true,
     "genplist": true,
     "pgwords": 275,
@@ -10,15 +10,15 @@
     "pl_bkt": "<",
     "pl_fntsz": "75%",
     "pl_pgtot": true,
-    "superscript": true,
+    "superscript": false,
     "super_color": "red",
     "super_fntsz": "60%",
     "super_total": true,
     "chap_pgtot": true,
     "chap_bkt": "",
-    "ebookconvert": "/Applications/calibre.app/Contents/MacOS/ebook-convert",
-    "epubcheck": "./epubcheck.sh",
-    "chk_orig": true,
+    "ebookconvert": "",
+    "epubcheck": "",
+    "chk_orig": false,
     "chk_paged": true,
     "DEBUG": false
 }
