--- a/epubpager.cfg
+++ b/epubpager.cfg
@@ -1,10 +1,10 @@
 {
     "outdir": "./",
-    "match": true,
-    "genplist": true,
+    "match": false,
+    "genplist": false,
     "pgwords": 275,
     "pages": 0,
-    "pageline": true,
+    "pageline": false,
     "pl_align": "center",
     "pl_color": "red",
     "pl_bkt": "<",
