GUIepubpager works with threaded paginations. Works reliably with python 3.8.10 and tkinter 8.6.11.

--- a/epubpager.cfg
+++ b/epubpager.cfg
@@ -1,10 +1,10 @@
 {
     "outdir": "./",
-    "match": false,
-    "genplist": false,
+    "match": true,
+    "genplist": true,
     "pgwords": 275,
     "pages": 0,
-    "pageline": false,
+    "pageline": true,
     "pl_align": "center",
     "pl_color": "red",
     "pl_bkt": "<",
@@ -17,8 +17,9 @@
     "chap_pgtot": true,
     "chap_bkt": "",
     "ebookconvert": "",
-    "epubcheck": "",
+    "epubcheck": "/Users/tbrown/bin/epubcheck.sh",
     "chk_orig": false,
     "chk_paged": true,
+    "quiet": true,
     "DEBUG": false
 }
