Fixed bug with wrlog execution before logfile set up was complete.

--- a/epubpager.cfg
+++ b/epubpager.cfg
@@ -1,11 +1,11 @@
 {
     "outdir": "./",
-    "match": true,
-    "genplist": true,
+    "match": false,
+    "genplist": false,
     "pgwords": 275,
     "pages": 0,
     "pageline": true,
-    "pl_align": "center",
+    "pl_align": "endp",
     "pl_color": "red",
     "pl_bkt": "<",
     "pl_fntsz": "75%",
@@ -16,7 +16,7 @@
     "super_total": true,
     "chap_pgtot": true,
     "chap_bkt": "",
-    "ebookconvert": "",
+    "ebookconvert": "/Applications/calibre.app/Contents/MacOS/ebook-convert",
     "epubcheck": "/Users/tbrown/bin/epubcheck.sh",
     "chk_orig": false,
     "chk_paged": true,
